# pico2-daq-mcu-bu79100g

./: CMakeLists.txt  bu79100g.pio  mcp3301.pio  mcp3301_pio.c  pico2_daq_bu79100g.c  pico2_daq_mcp3301.c
